<resources>
    <string name="app_name">TVS Credit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="employeeID">EmployeeID</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome</string>
    <string name="trace_vehicle">Trace Vehicle</string>
    <string name="vehicle_registration_number">Vehicle Registration Number</string>
    <string name="trace_owner">Trace Owner</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="trace_using_mobile_number">Trace using Mobile Number</string>
    <string name="trace_using_banking_transactions">Trace using Banking Transactions</string>
    <string name="view_on_google_maps">View on Google Maps</string>
    <string name="retry_using_different_method">Retry using different method</string>
</resources>