<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".fragments.LoginFragment">

    <ImageView
        android:id="@+id/logo_iv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:src="@drawable/tvslogo"/>
    <ImageView
        android:id="@+id/document_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/document"
        app:layout_constraintTop_toBottomOf="@id/logo_iv"
        android:layout_marginTop="-60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:fontFamily="@font/product_sans_bold"
        android:id="@+id/welcome_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/document_iv"
        android:text="@string/welcome"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/employeeID_tf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/employeeID"
        app:layout_constraintTop_toBottomOf="@id/welcome_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/dark_grey"
        app:hintTextColor="@color/dark_grey"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:fontFamily="@font/product_sans"
            android:background="@drawable/custom_bg"
            android:id="@+id/employeeID_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_grey"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_tf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/employeeID_tf"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:textColorHint="@color/dark_grey"
        app:hintTextColor="@color/dark_grey"
        app:endIconMode="password_toggle"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_et"
            android:fontFamily="@font/product_sans"
            android:background="@drawable/custom_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/dark_grey"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:fontFamily="@font/product_sans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot password?"
        app:layout_constraintTop_toBottomOf="@id/password_tf"
        app:layout_constraintEnd_toEndOf="@id/password_tf"
        android:layout_marginTop="5dp"
        android:textColor="@color/dark_grey"/>
    
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/proceed"
        app:layout_constraintTop_toBottomOf="@id/password_tf"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardBackgroundColor="@color/blue"
        >
        <ImageView
            android:id="@+id/btn_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:src="@drawable/ic_baseline_arrow_forward_24"/>

    </com.google.android.material.card.MaterialCardView>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/loginProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_tf"/>








</androidx.constraintlayout.widget.ConstraintLayout>