<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".fragments.TracingInfoFragment">
    <ImageView
        android:layout_marginTop="15dp"
        android:id="@+id/logo_iv"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:src="@drawable/tvslogo"/>
    <ImageView
        android:id="@+id/map_iv"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/map"
        app:layout_constraintTop_toBottomOf="@id/logo_iv"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/man_iv"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/man"/>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        app:cardBackgroundColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:strokeWidth="2dp"
        app:strokeColor="@color/blue"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/map_iv"
        app:layout_constraintStart_toStartOf="parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content">
            <TextView
                android:fontFamily="@font/product_sans_bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/trace_vehicle_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trace_vehicle"
                android:textSize="17sp"
                android:textStyle="bold"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/trace_vehicle_tf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/vehicle_registration_number"
                app:layout_constraintTop_toBottomOf="@id/trace_vehicle_tv"
                app:layout_constraintStart_toStartOf="parent"
                android:textColorHint="@color/dark_grey"
                app:hintTextColor="@color/dark_grey"                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:background="@drawable/custom_bg"
                    android:id="@+id/trace_vehicle_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_grey"
                    android:fontFamily="@font/product_sans"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trace_vehicle_tf"
                android:id="@+id/or_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="or"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="17sp"
                android:textStyle="bold"/>
            <View
                android:layout_marginEnd="5dp"
                android:layout_marginTop="33dp"
                app:layout_constraintTop_toBottomOf="@id/trace_vehicle_tf"
                android:layout_width="0dp"
                android:layout_height="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/or_tv"
                android:background="@color/blue"/>
            <View
                android:layout_marginStart="5dp"
                android:layout_marginTop="33dp"
                app:layout_constraintTop_toBottomOf="@id/trace_vehicle_tf"
                android:layout_width="0dp"
                android:layout_height="2dp"
                app:layout_constraintStart_toEndOf="@id/or_tv"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@color/blue"/>
            <TextView
                android:fontFamily="@font/product_sans_bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/or_tv"
                android:id="@+id/trace_owner_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trace_owner"
                android:textSize="17sp"
                android:textStyle="bold"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/trace_owner_tf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/aadhar_number"
                app:layout_constraintTop_toBottomOf="@id/trace_owner_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/dark_grey"
                app:hintTextColor="@color/dark_grey"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:background="@drawable/custom_bg"
                    android:id="@+id/trace_owner_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_grey"
                    android:fontFamily="@font/product_sans"
                    />

            </com.google.android.material.textfield.TextInputLayout>






        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/proceed"
        app:layout_constraintTop_toBottomOf="@id/card"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:cardBackgroundColor="@color/blue"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:src="@drawable/ic_baseline_arrow_forward_24"/>

    </com.google.android.material.card.MaterialCardView>







</androidx.constraintlayout.widget.ConstraintLayout>